Broke camera unmute in WebRTC call on macOS
Categories
(Core :: WebRTC: Audio/Video, defect)
Tracking
()
Tracking | Status | |
---|---|---|
thunderbird_esr60 | --- | unaffected |
thunderbird_esr68 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox74 | --- | unaffected |
firefox75 | --- | unaffected |
firefox76 | + | verified |
People
(Reporter: jib, Assigned: dminor)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Open https://jsfiddle.net/jib1/z0desL8x/89/show/ and share camera
- Click
transceiver = pc.addTransceiver(trackA, {streams})
button - Click
transceiver.sender.track.enabled = false
button - Click
transceiver.sender.track.enabled = true
button
Expected result:
- Camera video appeared in 2, went black in 3, and reappeared in 3.
Actual result:
- Camera video appeared in 2, went black in 3, and remained black in 3.
Once the video disappears, there appears to be no way to get it back other than to refresh the page.
Regression range:
42:48.74 INFO: Narrowed inbound regression window from [25454b62, 0bf2c6b5] (4 builds) to [dc307d95, 0bf2c6b5] (2 builds) (~1 steps left)
42:48.74 INFO: No more inbound revisions, bisection finished.
42:48.74 INFO: Last good revision: dc307d95ba3591be70134cc4563cb9d0b0247bb1
42:48.74 INFO: First bad revision: 0bf2c6b5eed6f1314ff10b1a482b31c83af0cb85
42:48.74 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=dc307d95ba3591be70134cc4563cb9d0b0247bb1&tochange=0bf2c6b5eed6f1314ff10b1a482b31c83af0cb85
Reporter | ||
Comment 1•5 years ago
|
||
[Tracking Requested - why for this release]: Web conference video may not recover from user muting & unmuting camera on mac.
Reporter | ||
Comment 2•5 years ago
|
||
I got confused by bug 1621500 not being closed. I saw the version number 74
and assumed it landed in 74. Luckily it is much more recent. Phew!
Reporter | ||
Comment 3•5 years ago
•
|
||
Local mute/unmute works fine https://jsfiddle.net/jib1/3ykab1e2/39/show fyi, so this is something to do with RTCPeerConnection as a sink.
Update: I spoke too soon (forgot to move my head). Local video appears frozen while remote video is black, like comment 4
Reporter | ||
Comment 4•5 years ago
|
||
I've confirmed this breaks camera unmute on https://whereby.com/ - Interestingly, it also freezes self-view there.
Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Comment 7•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Comment 8•5 years ago
|
||
Reproduced the initial issue using an old Nightly build from 2020-03-26, verified that using latest Beta build 76.0b6 on macOS 10.15.5, this issue is no longer reproducible.
Updated•5 years ago
|
Description
•