Bug 1625288 - Fix broken camera unmute in WebRTC call on macOS; r=jib

Differential Revision: https://phabricator.services.mozilla.com/D68459

--HG--
extra : moz-landing-system : lando