media/webrtc/trunk/webrtc/modules/video_capture/objc/rtc_video_capture_objc.mm
@@ -240,7 +240,6 @@ using namespace webrtc::videocapturemodule;
   _orientationHasChanged = NO;
   [self waitForCaptureChangeToFinish];
   [self directOutputToNil];
-  _owner = NULL;
 
   if (!_captureSession) {
     return NO;
@@ -326,9 +325,7 @@ using namespace webrtc::videocapturemodule;
   tempCaptureCapability.maxFPS = _capability.maxFPS;
   tempCaptureCapability.videoType = VideoType::kUYVY;
 
-  if (_owner) {
-    _owner->IncomingFrame(baseAddress, frameSize, tempCaptureCapability, 0);
-  }
+  _owner->IncomingFrame(baseAddress, frameSize, tempCaptureCapability, 0);
 
   CVPixelBufferUnlockBaseAddress(videoFrame, kFlags);
 }
